# colrev-python-package-tutorial

./: README.md  pyproject.toml
colrev-journal-formatter/: __init__.py  formatter.py
tests/: test_formatter.py
